--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "aos": "^2.3.4",
     "eslint-plugin-react": "^7.20.0",
     "node-sass": "^4.14.1",
+    "particles.js": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-parallax": "^3.0.3",
+    "react-particles-js": "^3.2.1",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16"
   },
